--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,12 @@
         </activity>
 
 
+        <activity
+            android:name=".activities.admin.AdminHomeActivity"
+            android:exported="true">
+        </activity>
+
+
     </application>
 
 </manifest>
