--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,13 @@
             android:exported="true">
         </activity>
 
+        <activity
+            android:name=".fragments.AdminOwnerDetailActivity"
+            android:hardwareAccelerated="false" />
+        <activity
+            android:name=".fragments.AdminUserDetailActivity"
+            android:hardwareAccelerated="false" />
+
 
     </application>
 
